<resources>
    <string name="app_name">praassest1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">ABDUL HARIS</string>
    <string name="nim">6706184052</string>
    <string name="kelas">D3IF 42-02</string>
    <string name="about">About</string>
    <string name="asesment">Pra-Assesment</string>
    <string name="persegipanjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>

</resources>
