<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".About" android:id="@+id/frameLayout">
    <TextView
            android:text="@string/nama"
            android:layout_width="262dp"
            android:layout_height="41dp"
            android:id="@+id/et_nama" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp" app:layout_constraintHorizontal_bias="0.586"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/nim"
            android:layout_width="262dp"
            android:layout_height="41dp"
            android:id="@+id/et_nim" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp" app:layout_constraintHorizontal_bias="0.586"
            app:layout_constraintTop_toBottomOf="@+id/et_nama"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/kelas"
            android:layout_width="262dp"
            android:layout_height="41dp"
            android:id="@+id/et_kelas" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.586"
            app:layout_constraintTop_toBottomOf="@+id/et_nim"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/about"
            android:layout_width="398dp"
            android:layout_height="45dp"
            android:id="@+id/et_about" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</androidx.constraintlayout.widget.ConstraintLayout>