<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainFragment" android:id="@+id/frameLayout2">
    <TextView
            android:text="@string/asesment"
            android:layout_width="400dp"
            android:layout_height="51dp"
            android:id="@+id/et_pra" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="1.0" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/persegipanjang"
            android:layout_width="272dp"
            android:layout_height="64dp"
            android:id="@+id/et_persegi" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_pra" android:layout_marginTop="136dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/segitiga"
            android:layout_width="274dp"
            android:layout_height="57dp"
            android:id="@+id/et_segitiga"
            app:layout_constraintTop_toBottomOf="@+id/et_persegi" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="56dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</androidx.constraintlayout.widget.ConstraintLayout>